# ici

./: notes.org  progress.org
src/: CMakeLists.txt  bmci.cxx  bmci.py  explore.py  pca.py  toy_problem.py  train_clear_sky.py
src/cmake/: FindNumPy.cmake  find_numpy.py
src/test/: bmci_test.py  pca_test.py
